# mock-smtp

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs  message.rs  store.rs  tls.rs  ui.rs
src/smtp/: mod.rs  server.rs  session.rs
