[package]
name = "mock-smtp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
html2text = "0.17.1"
mail-parser = "0.11.4"
ratatui = "0.30.2"
rcgen = "0.14.8"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
